tests/remap/fail/prolog/notcalled.ngc
o<notcalled>sub
(debug, I guess I shouldnt have been called)
o<notcalled>endsub
m2
